<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardBackgroundColor="#FFFFFF"
    android:layout_marginTop="8dp"
    tools:context=".Fragments.Show_Post_Option_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/post_option_cancel_btn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:rotation="45"
            android:src="@drawable/add_plus_icon_purple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/purple_text_colour"
            android:text="@string/what_do_you_want_to_post"
            />

        <LinearLayout
            android:id="@+id/post_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:civ_border_width="8dp"
                app:civ_border_color="@color/purple_text_colour"
                android:src="@drawable/photo_icon"
                app:civ_circle_background_color="@color/purple_text_colour"
                 />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/purple_text_colour"
                android:text="@string/photo"
                />

        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/grey_text"
            />

        <LinearLayout
            android:id="@+id/Post_Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:civ_border_width="8dp"
                app:civ_border_color="#3DD397"
                android:src="@drawable/ask_question_icon"
                app:civ_circle_background_color="#3DD397"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/purple_text_colour"
                android:text="@string/question"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/grey_text"
            />

        <LinearLayout
            android:id="@+id/Post_Poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:civ_border_width="8dp"
                app:civ_border_color="#2A7EE4"
                android:src="@drawable/poll_icon"
                app:civ_circle_background_color="#2A7EE4"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/purple_text_colour"
                android:text="@string/poll"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/grey_text"
            />

        <LinearLayout
            android:id="@+id/Post_Event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:civ_border_width="8dp"
                app:civ_border_color="#ED592B"
                android:src="@drawable/event_icon"
                app:civ_circle_background_color="#ED592B"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/purple_text_colour"
                android:text="@string/event"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/grey_text"
            />

        <LinearLayout
            android:id="@+id/Post_Tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:civ_border_width="8dp"
                app:civ_border_color="#F6E125"
                android:src="@drawable/tip_icon"
                app:civ_circle_background_color="#F6E125"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/purple_text_colour"
                android:text="@string/question"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/grey_text"
            />
        

       


    </LinearLayout>



</androidx.cardview.widget.CardView>